# tlds-monitoring

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: download_tlds_info.yml
data/: root_tlds_simplified_details.json
data/domain/: aaa.json  aarp.json  abb.json  abbott.json  abbvie.json  abc.json  able.json  abogado.json  abudhabi.json  ac.json  academy.json  accenture.json  accountant.json  accountants.json  aco.json  actor.json  ad.json  ads.json  adult.json  ae.json  aeg.json  aero.json  aetna.json  af.json  afl.json  africa.json  ag.json  agakhan.json  agency.json  ai.json  aig.json  airbus.json  airforce.json  airtel.json  akdn.json  al.json  alibaba.json  alipay.json  allfinanz.json  allstate.json  (+1400 more)
src/tlds_monitoring/: __init__.py
src/tlds_monitoring/root/: __init__.py  details.py  simplification.py  tlds.py
